--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -9,12 +9,10 @@
 </head>
 
 <body>
-    Before
-    <br>
-    <%- body %>
+    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/errorMessage.ejs') %>
+            <%- body %>
 
-        <br>
-        After
 
 </body>
 
